replace start.sh to Docker